--- a/src/main/webapp/static/css/cadastro.css
+++ b/src/main/webapp/static/css/cadastro.css
@@ -1,3 +1,6 @@
 @charset "UTF-8";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
+body {
+  background-color: lightgreen;
+}
 
