--- a/src/main/webapp/static/css/index.css
+++ b/src/main/webapp/static/css/index.css
@@ -2,6 +2,10 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
+    background-color: #3465a4;
+    font-family:'Segoe UI';
+    
+    
 }
 /*cabeçalhos do botões de iniciar e cadastrar */
 .top-nav {
@@ -11,11 +15,16 @@ body, html {
     top: 0;
     left: 0;
     z-index: 999;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 20 px;
 }
 
 .top-nav .nav-buttons a {
     color: white;
     font-weight: 500;
+    margin-left: 15px;
+    text-decoration:none; 
 }
 
 .bg-custom {
@@ -25,20 +34,71 @@ body, html {
 
 .hero-text {
     text-align: center;
-    color: black; 
+    color: white; 
 }
 
 .hero {
-    background: linear-gradient(to bottom, #ffffff 60%);
+    background: linear-gradient;
+    background-color: #3465a4;;
     height: 100vh;
     position: relative;
     overflow: hidden;
-    padding-top: 90px;
+    padding: 100px 20px;
+    padding-top:0px;
+    color:white;
+    min-height: 100vh;
+}
+.hero h1 {
+	padding-top:-10px;
+    font-size: 2.5rem; 
+    font-weight: bold;
+}
+.hero p{
+	font-size: 2rem;
+    margin: 0 auto 15px;
+    max-width:900px;
+    	
 }
 
 
+.hero::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 20%;
+    height: 10px;
+    background: rgb(0, 0, 0);
+    border-top-left-radius: 50% 50px;
+    border-top-right-radius: 100% 50px;
+    z-index: 0;
+}
+.hero-have {
+    position: absolute;
+    bottom: 0;
+    left: 6 0px;
+    width: 100%;
+    overflow: hidden; 
+    line-height: 0; 
+}
+
+.hero-have svg {
+    display: block;
+    width: 100%; 
+    height: 270px; 
+}
 
 
-
-
+.hero .btn-resg {
+    background-color: white;
+    color:  black;
+    font-weight: bold;
+    border: none;
+    padding: 20px 80px;
+    border-radius: 8px; 
+}
+.hero.img{
+	max-width: 100%																															;
+	width:60%;
+}
 
