--- a/src/main/webapp/static/css/login.css
+++ b/src/main/webapp/static/css/login.css
@@ -3,7 +3,7 @@ body {
 	margin: 0;
 	padding: 0;
 	min-height: 100vh;
-	background: linear-gradient(to right, #7f00ff, #2575fc);
+    background: linear-gradient(to right, #1e3c72, #2a5298);
 	display: flex;
 	justify-content: center;
 	align-items: center;
