alterações no header

--- a/src/main/webapp/static/css/listarvideoaulaTutor.css
+++ b/src/main/webapp/static/css/listarvideoaulaTutor.css
@@ -19,7 +19,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f5f7fa;
     color: #333;
-    padding: 30px;
+    padding: 0;
 }
 
 /* Título */
